# stylus

./: .gitmodules  Dockerfile  Makefile  README.md  go.mod  go.sum
arbitrator/: Cargo.toml
arbitrator/arbutil/: Cargo.toml
arbitrator/arbutil/src/: color.rs  evm.rs  format.rs  lib.rs  operator.rs  types.rs  wavm.rs
arbitrator/arbutil/src/evm/: api.rs  js.rs  mod.rs
arbitrator/cargo-stylus/: Cargo.toml
arbitrator/cargo-stylus/src/: check.rs  constants.rs  deploy.rs  main.rs  multicall.rs  project.rs  tx.rs  wallet.rs
arbitrator/common/: build.rs
arbitrator/common/src/: brotli.rs  lib.rs
arbitrator/gas-pricer/: Cargo.toml  modified_15k.wat
arbitrator/gas-pricer/src/: main.rs  my_wat.wat  pcg32.wat  rng.rs
arbitrator/jit/programs/pure/: main.wat
arbitrator/jit/src/: arbcompress.rs  gostack.rs  machine.rs  runtime.rs  socket.rs  syscall.rs  user.rs  wavmio.rs
arbitrator/jit/src/user/: evm_api.rs  mod.rs
arbitrator/langs/rust/: Cargo.toml
arbitrator/langs/rust/src/: caching_storage.rs  call.rs  contract.rs  evm.rs  extractors.rs  lib.rs  util.rs
arbitrator/langs/rust/tests/: extractors.rs
arbitrator/langs/rust_macros/: Cargo.toml
arbitrator/langs/rust_macros/src/: lib.rs
arbitrator/polyglot/: .gitignore  Cargo.toml
arbitrator/polyglot/fuzz/: Cargo.toml
arbitrator/polyglot/fuzz/fuzz_targets/: fuzz_both.rs  fuzz_machine.rs  util.rs  wasm.rs
arbitrator/polyglot/fuzz/src/: main.rs  wasm.rs
arbitrator/polyglot/honggfuzz/: Cargo.toml
arbitrator/polyglot/programs/eddsa/: .gitignore  arbitrum.h  eddsa.wasm  main.c
arbitrator/polyglot/programs/sha3/: Cargo.toml
arbitrator/polyglot/programs/sha3/src/: arbitrum.rs  main.rs
arbitrator/polyglot/src/: depth.rs  execute.rs  export.rs  lib.rs  machine.rs  main.rs  meter.rs  test.rs  util.rs
arbitrator/polyglot/src/middlewares/: depth.rs  memory.rs  meter.rs  mod.rs  start.rs
arbitrator/prover/: Cargo.toml
arbitrator/prover/fuzz/: Cargo.toml
arbitrator/prover/src/: binary.rs  host.rs  lib.rs  machine.rs  main.rs  memory.rs  merkle.rs  print.rs  test.rs  utils.rs  value.rs  wavm.rs
arbitrator/prover/src/middlewares/: config.rs  depth.rs  memory.rs  meter.rs  mod.rs  start.rs
arbitrator/prover/src/programs/: config.rs  counter.rs  depth.rs  dynamic.rs  exec.rs  memory.rs  meter.rs  mod.rs  prelude.rs  print.rs  start.rs
arbitrator/prover/test-cases/: dynamic.wat  link.wat
arbitrator/seraphina-runner/: Cargo.toml  Timing Analysis.ipynb  stdout.txt
arbitrator/seraphina-runner/src/: main.rs  my_wat.wat
arbitrator/stylus/: Cargo.toml  cbindgen.toml
arbitrator/stylus-cli/: Cargo.toml  README.md
arbitrator/stylus-cli/src/: compile.rs  config.rs  consts.rs  main.rs  new.rs  run.rs
arbitrator/stylus/fuzz/: Cargo.toml
arbitrator/stylus/fuzz/fuzz_targets/: fuzz_machine.rs  util.rs  wasm.rs
arbitrator/stylus/src/: benchmarks.rs  env.rs  evm_api.rs  host.rs  lib.rs  lru_cache.rs  native.rs  run.rs  stylus.rs
arbitrator/stylus/src/test/: api.rs  fuzz.rs  handler.rs  lru_cache.rs  misc.rs  mod.rs  native.rs  sdk.rs  timings.rs
arbitrator/stylus/src/test/fuzz/: wasm.rs
arbitrator/stylus/tests/echo/: Cargo.toml  privkey
arbitrator/stylus/tests/echo/src/: main.rs
arbitrator/stylus/tests/erc20/: Cargo.toml
arbitrator/stylus/tests/erc20/src/: erc20.rs  main.rs
arbitrator/stylus/tests/evm-data/src/: main.rs
arbitrator/stylus/tests/handler-macro/: Cargo.toml
arbitrator/stylus/tests/handler-macro/src/: main.rs
arbitrator/stylus/tests/keccak/: privkey
arbitrator/stylus/tests/nonreentrant-enter/: Cargo.toml
arbitrator/stylus/tests/nonreentrant-enter/src/: main.rs
arbitrator/stylus/tests/precompile/: Cargo.toml
arbitrator/stylus/tests/precompiles/: Cargo.toml
arbitrator/stylus/tests/precompiles-callback/: Cargo.toml
arbitrator/stylus/tests/read-return-data/: Cargo.toml
arbitrator/stylus/tests/reentrant-enter/: Cargo.toml
arbitrator/stylus/tests/reentrant-reenter/: Cargo.toml
arbitrator/stylus/tests/router-entry/: Cargo.toml
arbitrator/stylus/tests/simple-call/: Cargo.toml
arbitrator/stylus/tests/siphash/: main.c
arbitrator/stylus/tests/timings/: addmod.wat  div.wat  exp.wat  expmod.wat  mod_.wat  mulmod.wat  sdiv.wat  sign_extend.wat  smod.wat
arbitrator/stylus/tests/transient-delegate-enter/: Cargo.toml
arbitrator/stylus/tests/transient-delegate-reenter/: Cargo.toml
arbitrator/stylus/tests/transient-enter/: Cargo.toml
arbitrator/stylus/tests/transient-reenter/: Cargo.toml
arbitrator/stylus/tests/zig-example/: README.md  build.zig
arbitrator/tools/pricer/: .gitignore  Cargo.toml
arbitrator/tools/pricer/src/: analyze.rs  check.rs  evm_api.rs  lib.rs  main.rs  model.rs  record.rs  util.rs  wasm.rs
arbitrator/tools/pricers/: Cargo.toml
arbitrator/tools/pricers/activate/: .gitignore  Cargo.toml
arbitrator/tools/pricers/benchmarks/: build.sh
arbitrator/tools/pricers/compile/: Cargo.toml
arbitrator/tools/pricers/runtime/: Cargo.toml
arbitrator/tools/pricing/: Cargo.toml
arbitrator/tools/pricing/fuzz/: Cargo.toml
arbitrator/tools/pricing/src/: lib.rs  main.rs  wasm.rs
arbitrator/wasm-libraries/: Cargo.toml
arbitrator/wasm-libraries/brotli/: Cargo.toml
arbitrator/wasm-libraries/brotli/src/: lib.rs
arbitrator/wasm-libraries/forward/src/: main.rs
arbitrator/wasm-libraries/host-io/src/: lib.rs
arbitrator/wasm-libraries/poly-host/: Cargo.toml  forwarder.wat  forwarder_stub.wat
arbitrator/wasm-libraries/poly-host/src/: gas.rs  lib.rs  prove.rs  util.rs
arbitrator/wasm-libraries/poly-link/: Cargo.toml
arbitrator/wasm-libraries/poly-link/src/: lib.rs
arbitrator/wasm-libraries/user-host/: forward.wat  forward_stub.wat
arbitrator/wasm-libraries/user-host-trait/: Cargo.toml
arbitrator/wasm-libraries/user-host-trait/src/: lib.rs
arbitrator/wasm-libraries/user-host/src/: host.rs  link.rs  user.rs
arbitrator/wasm-libraries/user-test/src/: host.rs  lib.rs  user.rs
arbitrator/wasm-libraries/wasi-stub/src/: lib.rs
arbitrator/wasm-libraries/wavm-util/: Cargo.toml
arbitrator/wasm-libraries/wavm-util/src/: lib.rs
(+111 files in other folders)
