[package]
name = "arbutil"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "0.10.7"
eyre = "0.6.5"
hex = "0.4.3"
num_enum = "0.7.0"
num-traits = "0.2.17"
sha2 = "0.10.7"
sha3 = "0.10.8"
siphasher = "0.3.10"
wasmparser = "0.83"
serde = { version = "1.0.130", features = ["derive", "rc"] }

[features]
wavm = []
