[package]
name = "gas-pricer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rand = "0.8.5"
rand_pcg = "0.3.1"
wabt = "0.10.0"
wasmer = { path = "../wasm-upstream/wasmer/lib/api" }
