[package]
name = "polyglot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.3.0"
wasmer-compiler-singlepass = "2.3.0"
wasmer-types = "2.3.0"
wasmparser = "0.83.0"
parking_lot = "0.12.1"
loupe = "0.1.3"
eyre = "0.6.5"
