[package]
name = "polyglot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prover = { path = "../prover/" }
wasmer = { path = "/home/rachel/Documents/upstream/wasmer/lib/api/" }
wasmer-compiler-singlepass = { path = "/home/rachel/Documents/upstream/wasmer/lib/compiler-singlepass" }
wasmer-types = { path = "/home/rachel/Documents/upstream/wasmer/lib/types" }
#wasmer = "2.3.0"
#wasmer-compiler-singlepass = "2.3.0"
#wasmer-types = "2.3.0"
wasmparser = "0.83.0"
parking_lot = "0.12.1"
loupe = "0.1.3"
thiserror = "1.0.33"
ed25519-dalek = "1.0.1"
eyre = "0.6.5"
common = { path = "../common/" }
sha3 = "0.9.1"
hex = "0.4.3"
rand = "0.7"
