[package]
name = "polyglot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prover = { path = "../prover/" }
wasmer = { path = "../wasm-upstream/wasmer/lib/api/" }
wasmer-compiler-singlepass = { path = "../wasm-upstream/wasmer/lib/compiler-singlepass" }
wasmer-types = { path = "../wasm-upstream/wasmer/lib/types" }
wasmparser = "0.83.0"
parking_lot = "0.12.1"
loupe = "0.1.3"
thiserror = "1.0.33"
ed25519-dalek = "1.0.1"
eyre = "0.6.5"
arbutil = { path = "../arbutil/" }
brotli2 = "0.3.2"
sha3 = "0.9.1"
hex = "0.4.3"
rand = "0.7"

[lib]
crate-type = ["staticlib", "lib"]
