[package]
name = "prover"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
brotli2 = { version = "0.3.2", optional = true }
digest = "0.9.0"
eyre = "0.6.5"
fnv = "1.0.7"
hex = "0.4.3"
libc = "0.2.108"
nom = "7.0.0"
nom-leb128 = "0.2.0"
num = "0.4"
rayon = { version = "1.5.1", optional = true }
rustc-demangle = "0.1.21"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.67"
sha3 = "0.9.1"
static_assertions = "1.1.0"
structopt = "0.3.23"
arbutil = { path = "../arbutil/" }
thiserror = "1.0.33"
wasmer = { path = "../wasm-upstream/wasmer/lib/api/", optional = true }
wasmer-types = { path = "../wasm-upstream/wasmer/lib/types" }
wasmer-compiler-singlepass = { path = "../wasm-upstream/wasmer/lib/compiler-singlepass", optional = true }
wasmparser = "0.83"
parking_lot = "0.12.1"
loupe = "0.1.3"
serde_with = "1.12.1"

[lib]
name = "prover"
crate-type = ["staticlib", "lib"]

[features]
default = ["native"]
native = ["dep:brotli2", "dep:rayon", "dep:wasmer", "dep:wasmer-compiler-singlepass"]
