[package]
name = "seraphina-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbutil = { path = "../arbutil" }
prover = { path = "../prover"}
wabt = "0.10.0"
wasmer = { path = "../wasm-upstream/wasmer/lib/api" }
wasmer-compiler-singlepass = { path = "../wasm-upstream/wasmer/lib/compiler-singlepass" }
wasmer-compiler-cranelift = { path = "../wasm-upstream/wasmer/lib/compiler-cranelift" }
wasmer-compiler-llvm = { path = "../wasm-upstream/wasmer/lib/compiler-llvm" }
wasm-smith = { path = "../wasm-upstream/wasm-tools/crates/wasm-smith" }
wasmparser = "0.83.0"
parking_lot = "0.12.1"
stylus = { path = "../stylus" }
eyre = "0.6.5"
hex = "0.4.3"