[package]
name = "stylus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
stylus = { path = "../stylus/" }
arbutil = { path = "../arbutil/" }
prover = { path = "../prover/", default-features = false, features = ["native"] }
toml = "0.7.2"
serde = "1.0"
bytesize = {version = "1.1.0", features = ["serde"]}
bincode = "1.3.3"
brotli2 = { version = "0.3.2" }
bytes = "1.4.0"
sha3 = "0.10.5"
hex = "0.4.3"
