[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = { path = "/home/rachel/Documents/upstream/wasmer/lib/api/" }
#wasmer = "2.3.0"

honggfuzz = "0.5.55"
wasm-smith = "0.11.4"
arbitrary = "1.1.6"
wasmparser = "0.83.0"

polyglot = { path = "../" }

[workspace]
