[package]
name = "pricer"
version = "0.1.0"
edition = "2021"

[dependencies]
rev_lines = "0.3.0"
structopt = "0.3.23"
humantime = "2.1.0"
arbitrary = "1.1.6"
affinity = "0.1.2"
eyre = "0.6.5"
rand = "0.8.5"
wabt = "0.10.0"
wat = "1.0.56"
num = "0.4.0"
hex = "0.4.3"
arbutil = { path = "../../arbutil" }
wasmer = { path = "../wasmer/lib/api" }
wasm-smith = { path = "../wasm-tools/crates/wasm-smith" }
wasmprinter = { path = "../wasm-tools/crates/wasmprinter" }
stylus = { path = "../../stylus" }
prover = { path = "../../prover"}
