[package]
name = "pricing"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = "1.1.6"
eyre = "0.6.5"
linregress = "0.5.1"
indexmap = "1.9.3"
arbutil = { path = "../../arbutil" }
#prover = { path = "../../prover" }
wasmer = { path = "../wasmer/lib/api" }
wasm-smith = { path = "../wasm-tools/crates/wasm-smith" }

[workspace]
