[package]
name = "poly-link"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
prover = { path = "../../prover/", default-features = false }
go-abi = { path = "../go-abi" }
arbutil = { path = "../../arbutil/" }
wavm-util = { path = "../wavm-util/" }
hashbrown = "0.12.3"
hex = "0.4.3"
