[package]
name = "sha3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.5"
hex = "0.4.3"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
panic = "abort"

[workspace]
