[package]
name = "transient-delegate-reenter"
version = "0.1.0"
edition = "2021"

[dependencies]
ruint = "1.11.1"
stylus-sdk = { path = "../../../langs/rust/stylus-sdk", features = ["reentrant"] }
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
