[package]
name = "activate"
version = "0.1.0"
edition = "2021"

[dependencies]
affinity.workspace = true
arbitrary.workspace = true
arbutil.workspace = true
eyre.workspace = true
prover.workspace = true
rand.workspace = true
wasmer.workspace = true
wasm-smith.workspace = true
wasmprinter.workspace = true
